2006-06-21  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-cite-reply-above): New variable.
	(message-yank-original): Use it.

2006-06-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-parse-string): Allow `*'s in parameter values.

2006-06-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-bookmark.el (gnus-bookmark-jump): Don't mark unrelated articles
	as read.

	* gnus-group.el (gnus-group-quick-select-group): Add GROUP argument.

2006-06-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-bookmark.el: Fix Copyright, keywords, whitespace, etc.
	(gnus-bookmark-default-file): Use gnus-directory.
	(gnus-bookmark-bmenu-file-column, gnus-bookmark-use-annotations):
	Remove "*" in doc string.
	(gnus-bookmark-write-file): Simplify.
	(gnus-bookmark-maybe-sort-alist): Use `when'.
	(gnus-bookmark-get-bookmark): Fix typo in doc string.
	(gnus-bookmark-set-bookmark-name, gnus-bookmark-get-bookmark): Add
	FIXME about Emacs 21 and XEmacs compatibility.
	(gnus-bookmark-set-bookmark-name): Use `gnus-replace-in-string' for
	compatibility.
	(gnus-bookmark-bmenu-mode): Use `gnus-run-mode-hooks' for
	compatibility.
	(gnus-bookmark-menu-heading): Fix version.

2006-06-19  Bastien Guerry  <bzg@altern.org>

	* gnus-bookmark.el: New file.

2006-06-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-syntax-checks): Doc fix.

2006-06-17  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus-srvr.el (gnus-browse-unsubscribe-group): Don't subscribe
	unsubscribed groups as if they were killed ones.  It causes duplicate
	entries in gnus-newsrc-alist.

2006-06-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-syntax-checks): Doc fix.
	(message-send-mail): Add check for continuation headers.
	(message-check-news-header-syntax): Fix regexp used to check for
	continuation headers.

2006-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-display-mime): Make sure body ends with newline.

2006-06-11  Reiner Steib  <Reiner.Steib@gmx.de>
